# bd

./: README.md  pyproject.toml
app/: package-lock.json
app/bd-robots-app/: index.html  package-lock.json  package.json  vite.config.js
app/bd-robots-app/src/: App.jsx  index.css
app/bd-robots-app/src/components/: FilterControls.jsx  LoginScreen.jsx  RecordsTable.jsx  RobotEventsTable.jsx
bdapi/: dbpopulate.js  main.py  populate_bduser.js  populate_robot_event.js  test_endpoint.py
